# warehouse_project

attach_shelf_interfaces/: CMakeLists.txt  package.xml
attach_shelf_interfaces/srv/: ChangeFootprintPolygon.srv  GoToLoading.srv  MoveForwards.srv  Rotate.srv
cartographer_slam/: CMakeLists.txt  package.xml
cartographer_slam/config/: cartographer_sim.lua  warehouse_map_sim.yaml
cartographer_slam/launch/: cartographer.launch.py  cartographer_real.launch.py  save_map.launch.py
cartographer_slam/rviz/: rviz_config.rviz
cartographer_slam/tf/real/: frames_2024-06-28_18.11.50.gv
cartographer_slam/tf/sim/: frames_2024-06-28_16.24.27.gv
custom_nav2_costmap_plugin/: CMakeLists.txt  filter_layer.xml  package.xml
custom_nav2_costmap_plugin/include/custom_nav2_costmap_plugin/: filter_layer.hpp
custom_nav2_costmap_plugin/src/: filter_layer.cpp
localization_server/: CMakeLists.txt  package.xml
localization_server/config/: amcl.yaml  amcl_real.yaml  warehouse_map_real.pgm  warehouse_map_real_keepout.pgm  warehouse_map_real_keepout.yaml  warehouse_map_sim.pgm  warehouse_map_sim_keepout.pgm  warehouse_map_sim_keepout.yaml
localization_server/launch/: localization.launch.py  localization_real.launch.py
localization_server/rviz/: rviz_config.rviz  rviz_config1.rviz
map_server/: CMakeLists.txt  package.xml
map_server/config/: warehouse_map_real.yaml
map_server/launch/: map_server.launch.py
map_server/rviz/: rviz_config.rviz
nav2_apps/: CMakeLists.txt  package.xml
nav2_apps/scripts/: move_shelf_to_ship.py  move_shelf_to_ship_real.py
nav2_apps/src/: attach_server.cpp  attach_server_real.cpp  change_footprint_service.cpp
nav2_apps/worlds/: attached_to_shelf
path_planner_server/: CMakeLists.txt  package.xml
path_planner_server/config/: bt.yaml  bt_real.yaml  controller.yaml  controller_real.yaml  planner_server.yaml  planner_server_real.yaml  recovery.yaml  recovery_real.yaml
path_planner_server/launch/: pathplanner.launch.py  pathplanner_real.launch.py
path_planner_server/rviz/: pathplanning.rviz  pathplanning_real.rviz
